--- a/template.yaml
+++ b/template.yaml
@@ -1,16 +1,18 @@
 name: Collector name
 title: COLLECTORNAME Monitoring
+duplicate_for_virtual_integrations:
+  list: ["[Ubuntu](link to ubuntu)", "[Redhat](link to redhat)"]
 overview:
   operation:
-    description: This collector periodically does http requests to one or more [Apache](link to collector) web servers to collect the metrics mod_status plugin that apache exposes
+    description: This collector periodically does http requests to one or more {[Apache](link to collector)} (<- CI will remove the curly brackets, they are for replacing with the virtual integrations, to replace the link each time) web servers to collect the metrics mod_status plugin that apache exposes
   platforms:
-    description: If this collector can't run on some platforms specify them here, otherwise set this to true and this text will not be rendered, instead a templated message will appear
-    boolean: true
+    description: If this collector can't run on some platforms specify them here and set it to false, otherwise set this to true and this text will not be rendered, instead a templated message will appear
+    use_templated_text: true
   multi-instance:
     boolean: true
   permissions:
-    description: if there are any notable permission requirements, eg running as root and so on, specify them here and set this to false, otherwise set it to true and a templated message will appear
-    boolean: true
+    description: if there are any notable permission requirements, eg running as root and so on, specify them here and set it to false, otherwise set it to true and a templated message will appear
+    use_templated_text: true
   related:
     description: "give a simple description if there are any other collectors related to this collector. Example -> To get the most out of your apache servers, you can monitor its processes for resources utilization and their log files to turn them into real-time metrics. Check our related resources for more information. (if not, leave empty)"
 setup:
@@ -60,34 +62,3 @@ related_resources:
     list: [apache, weblog, httpcheck, etc]
     provide:
       description: What info I can provide for other plugins that reference me? this will only be visible in their end, they will scrape this text. Example -> apps.plugin allows monitoring individual processes CPU, Memory, Disk I/O and many more resources utilization.
-metrics:
-  description: some description for this section, or leave empty
-  folding:
-    title: Metrics
-    enabled: false
-  scope:
-    global:
-      name: global
-      description: TBD
-      labels: []
-      metrics:
-        - name: adaptec_raid.ld_status
-          description: 'Status of logical devices (1: Failed or Degraded)'
-          unit: bool
-          dimensions:
-            - name: a dimension per logical device
-        - name: adaptec_raid.pd_state
-          description: 'State of physical devices (1: not Online)'
-          unit: bool
-          dimensions:
-            - name: a dimension per physical device
-        - name: adaptec_raid.smart_warnings
-          description: S.M.A.R.T warnings
-          unit: count
-          dimensions:
-            - name: a dimension per physical device
-        - name: adaptec_raid.temperature
-          description: Temperature
-          unit: celsius
-          dimensions:
-            - name: a dimension per physical device
